# opentab

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  opentab  pyproject.toml  ruff.toml  run_tests.py  test_opentab.py
.github/workflows/: bump-tap.yml  ci.yml  publish.yml
docs/: README.md  architecture.md  keys.md  pricing.md  privacy.md  sources.md  web.md  windows.md
hooks/: pre-push
scripts/: update_prices.py
src/opentab/: __init__.py  __main__.py  cli.py  demo.py  formatting.py  heatmap.py  models.py  notes.py  pricing.py  sources.py  state.py  themes.py  util.py  web.py  webpage.py
src/opentab/data/: models.json
src/opentab/stores/: __init__.py  cached.py  claude.py  codex.py  combined.py  copilot.py  csv_source.py  hermes.py  jsonl_source.py  openclaw.py  opencode.py  pi.py  vscode.py  zaly.py
src/opentab/tui/: __init__.py  app.py  keymap.py  renderer.py
tests/: __init__.py  _support.py  test_cli.py  test_demo.py  test_formatting.py  test_heatmap.py  test_notes.py  test_pricing.py  test_sources.py  test_state.py  test_stores_cached.py  test_stores_claude.py  test_stores_codex.py  test_stores_combined.py  test_stores_copilot.py  test_stores_csv.py  test_stores_hermes.py  test_stores_openclaw.py  test_stores_opencode.py  test_stores_pi.py  test_stores_vscode.py  test_stores_zaly.py  test_themes.py  test_tui_app.py  test_tui_detail.py  test_tui_export.py  test_tui_keymap.py  test_tui_prices.py  test_tui_trends.py  test_tui_whatif.py  test_util.py  test_web.py
