[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentab-ai"
dynamic = ["version"]
description = "A lazygit-style terminal UI to browse your AI coding spend across OpenCode, Claude Code, Codex, Copilot, and more."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mohamed Hamidi", email = "mohamed@hamidi.dev" }]
keywords = [
  "opencode",
  "claude-code",
  "codex",
  "copilot",
  "tui",
  "curses",
  "cost",
  "usage",
  "llm",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

# Runtime is stdlib-only on Linux/macOS. Native Windows Python ships no curses,
# so pull in the windows-curses shim there (and only there).
dependencies = ["windows-curses; platform_system == 'Windows'"]

[project.optional-dependencies]
dev = ["ruff==0.1.15"]

[project.urls]
Homepage = "https://github.com/hamidi-dev/opentab"
Repository = "https://github.com/hamidi-dev/opentab"
Issues = "https://github.com/hamidi-dev/opentab/issues"

[project.scripts]
opentab = "opentab.cli:main"

[tool.hatch.version]
path = "src/opentab/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/opentab"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/run_tests.py",
  "/scripts",
  "/README.md",
  "/LICENSE",
]
